--- a/opus/templates/macros/script.html
+++ b/opus/templates/macros/script.html
@@ -1,4 +1,4 @@
-{% macro src(path,) %}
+{% macro src(path) %}
   {% set fp = ['scripts', path] | join('/') %}
   <script
       src="{{ url_for('static', filename=fp) }}" {{ kwargs | join_attribute }}>
