--- a/opus/templates/layouts/app.html
+++ b/opus/templates/layouts/app.html
@@ -15,7 +15,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="{{ url_for('page.home') }}">Opus</a>
+        <a href="{{ url_for('page.home') }}"><h1>Opus</h1></a>
       </div>
       <div id="navbar" class="navbar navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
